--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "RPG Game",
   "scripts": {
-    "build:dev": "env NODE_ENV=development npx webpack",
-    "build": "env NODE_ENV=production npx webpack",
+    "build:dev": "env NODE_ENV=development webpack",
+    "build": "env NODE_ENV=production webpack",
+    "start": "webpack server",
     "lint": "npx eslint src/**/*.js",
     "prettier": "npx prettier --write .",
     "dev": "npx webpack server",
